# fitness-ai-assistant

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  PLAN.md  README.md  get_wrkout_data.sh  justfile  learn.md  main.py  pyproject.toml
.github/workflows/: ci.yml
configs/: feature_clip.yaml  feature_sentence.yaml  inference.yaml  inference_prod.yaml  training.yaml
data/: get_wrkout_data.sh
data/docs/: LESSONS_LEARNT.md  lessons-learnt.md
infra/: setup-local.sh  setup.sh
learning-systems/: 0-plan.md  1-scalability-notes.md  2-scalability-implementation-plan.md
src/: main.py
src/config/: README.md  __init__.py  base.py  feature.py  feature_config.py  inference.py  inference_config.py  loader.py  training_config.py
src/config/schemas/: __init__.py  dataset.py  device.py  embedding.py  model.py  paths.py  vector_db.py
src/eval/: eval_harness.py
src/feature_pipeline/: Readme.md  __init__.py  __main__.py  build_dataset.py  compute_embeddings.py  constants.py  create_db.py  debug_db.py  explore_embeddings.py  pipeline.py  utils.py
src/feature_pipeline/embedders/: __init__.py  base.py  clip.py  sentence.py
src/feature_pipeline/loaders/: __init__.py  base.py  exercise_loader.py
src/feature_pipeline/storage/: __init__.py  embeddings.py
src/feature_pipeline/visualizers/: __init__.py  similarity.py
src/inference_pipeline/: Readme.md  __main__.py  config.py  create_db.py  demo_query.py  gradio_app.py  pipeline.py  pipeline_factory.py  utils.py
src/inference_pipeline/backends/: __init__.py  base.py  local.py  milvus.py
src/inference_pipeline/loaders/: __init__.py  embeddings.py  metadata.py
src/inference_pipeline/models/: __init__.py
src/training_pipeline/: experiment_context.py  mlflow_experiments.py
tests/: __init__.py  test_config.py  test_feature_pipeline.py  test_inference_pipeline.py
